# Networking

./: .gitignore  CMakeLists.txt  README.md
SimpleRelay/: relay_server.cc  relay_server.h
SimpleServer/: message_queue.h  simple_server.cc  simple_server.h
cmake/: common.cmake  grpc.cmake  grpc_helpers.cmake
include/TextingClient/: texting_client.h
protos/: Relay.proto  simple_texting_service.proto
src/: texting_client.cc
